finishing with out shopping items *******make navigation drawer *******fix main activity*****

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="sittengs">Sittengs</string>
     <string name="select_group_members">select group members:</string>
     <string name="sign_in">Sign in</string>
+    <string name="settings">settings</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
